// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading demo -- indicator 1`] = `
.c0 {
  position: relative;
}

.c0 .uc-fe-animation-fade-enter,
.c0 .uc-fe-animation-fade-appear,
.c0 .uc-fe-animation-fade-leave,
.c0 .uc-fe-animation-fade-exit {
  -webkit-animation-duration: 500ms;
  animation-duration: 500ms;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c0 .uc-fe-animation-fade-enter,
.c0 .uc-fe-animation-fade-appear {
  -webkit-animation-name: eMLfYp;
  animation-name: eMLfYp;
}

.c0 .uc-fe-animation-fade-leave,
.c0 .uc-fe-animation-fade-exit {
  -webkit-animation-name: hSsjZP;
  animation-name: hSsjZP;
}

.c1 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 10;
  background: rgba(255,255,255,0.70);
}

.c2 {
  display: table;
  width: 100%;
  height: 100%;
}

.c2 > div {
  display: table-cell;
  vertical-align: middle;
  text-align: center;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        style="height:100px;background:gray;"
      />
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <div>
            <img
              src="https://loading.io/spinners/balls/lg.circle-slack-loading-icon.gif"
              width="50"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        style="height:100px;background:gray;"
      />
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <div>
            <img
              src="https://loading.io/spinners/coolors/lg.palette-rotating-ring-loader.gif"
              width="50"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Loading demo -- inlineBlock 1`] = `
.c4 {
  vertical-align: baseline;
}

.c4.c4.c4 {
  -webkit-animation: iVXCSc 1.2s infinite linear;
  animation: iVXCSc 1.2s infinite linear;
  line-height: normal;
}

.c0 {
  position: relative;
}

.c0 .uc-fe-animation-fade-enter,
.c0 .uc-fe-animation-fade-appear,
.c0 .uc-fe-animation-fade-leave,
.c0 .uc-fe-animation-fade-exit {
  -webkit-animation-duration: 500ms;
  animation-duration: 500ms;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c0 .uc-fe-animation-fade-enter,
.c0 .uc-fe-animation-fade-appear {
  -webkit-animation-name: eMLfYp;
  animation-name: eMLfYp;
}

.c0 .uc-fe-animation-fade-leave,
.c0 .uc-fe-animation-fade-exit {
  -webkit-animation-name: hSsjZP;
  animation-name: hSsjZP;
}

.c1 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 10;
  background: rgba(255,255,255,0.70);
}

.c2 {
  display: table;
  width: 100%;
  height: 100%;
}

.c2 > div {
  display: table-cell;
  vertical-align: middle;
  text-align: center;
}

.c3 {
  font-size: 20px;
  color: #3860f4;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
      style="display:inline-block;"
    >
      <div
        style="height:100px;display:inline-block;background:gray;"
      >
        <p
          style="color:red;"
        >
          this is content
        </p>
      </div>
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <div>
            <i
              class="uc-fe-icon icon__loading uc-fe-icon-spin c3 c4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
      style="display:inline-block;"
    >
      <div
        style="height:100px;width:100px;background:gray;"
      />
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <div>
            <i
              class="uc-fe-icon icon__loading uc-fe-icon-spin c3 c4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Loading demo -- loading 1`] = `
.c17 {
  position: relative;
}

.c17 .uc-fe-animation-fade-enter,
.c17 .uc-fe-animation-fade-appear,
.c17 .uc-fe-animation-fade-leave,
.c17 .uc-fe-animation-fade-exit {
  -webkit-animation-duration: 500ms;
  animation-duration: 500ms;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c17 .uc-fe-animation-fade-enter,
.c17 .uc-fe-animation-fade-appear {
  -webkit-animation-name: eMLfYp;
  animation-name: eMLfYp;
}

.c17 .uc-fe-animation-fade-leave,
.c17 .uc-fe-animation-fade-exit {
  -webkit-animation-name: hSsjZP;
  animation-name: hSsjZP;
}

.c9 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c11 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c14 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c16 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c7 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c7:hover {
  border-color: #3357df;
}

.c7:hover .c13 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c7 .c13 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c7 .c15 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c7 .c8 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c7 .c10,
.c7 .c12 {
  line-height: 16px;
}

.c7 .c10 {
  padding-right: 20px;
}

.c7 .c12 {
  padding-left: 20px;
}

.c7 .c10 {
  display: none;
}

.c18 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c18:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        loading
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        showTip
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c17"
    >
      <div
        style="height:100px;background:gray;"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c18"
          style="display:block;width:200px;margin:0 auto;top:20px;position:relative;"
          type="button"
        >
          Start To Loading
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Loading demo -- showLoading 1`] = `
.c4 {
  vertical-align: baseline;
}

.c4.c4.c4 {
  -webkit-animation: iVXCSc 1.2s infinite linear;
  animation: iVXCSc 1.2s infinite linear;
  line-height: normal;
}

.c0 {
  position: relative;
}

.c0 .uc-fe-animation-fade-enter,
.c0 .uc-fe-animation-fade-appear,
.c0 .uc-fe-animation-fade-leave,
.c0 .uc-fe-animation-fade-exit {
  -webkit-animation-duration: 500ms;
  animation-duration: 500ms;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c0 .uc-fe-animation-fade-enter,
.c0 .uc-fe-animation-fade-appear {
  -webkit-animation-name: eMLfYp;
  animation-name: eMLfYp;
}

.c0 .uc-fe-animation-fade-leave,
.c0 .uc-fe-animation-fade-exit {
  -webkit-animation-name: hSsjZP;
  animation-name: hSsjZP;
}

.c1 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 10;
  background: rgba(255,255,255,0.70);
}

.c2 {
  display: table;
  width: 100%;
  height: 100%;
}

.c2 > div {
  display: table-cell;
  vertical-align: middle;
  text-align: center;
}

.c3 {
  font-size: 20px;
  color: #3860f4;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        style="height:100px;background:gray;"
      />
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <div>
            <i
              class="uc-fe-icon icon__loading uc-fe-icon-spin c3 c4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        style="height:100px;background:gray;"
      />
    </div>
  </div>
</div>
`;
